coloquei a aba de projetos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <div class="botoes">
         <a id="item-select" href="index.html">Home</a>
+        <a href="projetos.html">Projetos</a>
         <a href="https://twitter.com/harujpgi">Redes Sociais</a>
         </div>
     </header>
